@@ -198,8 +198,17 @@ FileInformation::FileInformation (MainWindow* Main_, const QString &FileName_, a
             Filters[0]+=",signalstats=stat=tout+vrep+brng";
         if (ActiveFilters[ActiveFilter_Video_cropdetect])
             Filters[0]+=",cropdetect=reset=1:round=1";
-        if (ActiveFilters[ActiveFilter_Video_Psnr])
-            Filters[0]+=",split[a][b];[a]field=top[a1];[b]field=bottom[b1],[a1][b1]psnr";
+        if (ActiveFilters[ActiveFilter_Video_Psnr] && ActiveFilters[ActiveFilter_Video_Ssim])
+        {
+            Filters[0]+=",split[a][b];[a]field=top[a1];[b]field=bottom,split[b1][b2];[a1][b1]psnr[c1];[c1][b2]ssim";
+        }
+        else
+        {
+            if (ActiveFilters[ActiveFilter_Video_Psnr])
+                Filters[0]+=",split[a][b];[a]field=top[a1];[b]field=bottom[b1];[a1][b1]psnr";
+            if (ActiveFilters[ActiveFilter_Video_Ssim])
+                Filters[0]+=",split[a][b];[a]field=top[a1];[b]field=bottom[b1];[a1][b1]ssim";
+        }
         Filters[0].erase(0, 1); // remove first comma
         if (ActiveFilters[ActiveFilter_Audio_EbuR128])
             Filters[1]+=",ebur128=metadata=1";
