@@ -54,6 +54,7 @@ void Preferences::Load()
     ui->Filters_Video_signalstats->setChecked(ActiveFilters[ActiveFilter_Video_signalstats]);
     ui->Filters_Video_cropdetect->setChecked(ActiveFilters[ActiveFilter_Video_cropdetect]);
     ui->Filters_Video_Psnr->setChecked(ActiveFilters[ActiveFilter_Video_Psnr]);
+    ui->Filters_Video_Ssim->setChecked(ActiveFilters[ActiveFilter_Video_Ssim]);
     ui->Filters_Audio_EbuR128->setChecked(ActiveFilters[ActiveFilter_Audio_EbuR128]);
     ui->Filters_Audio_astats->setChecked(ActiveFilters[ActiveFilter_Audio_astats]);
 
@@ -86,6 +87,8 @@ void Preferences::OnAccepted()
         ActiveFilters.set(ActiveFilter_Video_cropdetect);
     if (ui->Filters_Video_Psnr->isChecked())
         ActiveFilters.set(ActiveFilter_Video_Psnr);
+    if (ui->Filters_Video_Ssim->isChecked())
+        ActiveFilters.set(ActiveFilter_Video_Ssim);
     if (ui->Filters_Audio_EbuR128->isChecked())
         ActiveFilters.set(ActiveFilter_Audio_EbuR128);
     if (ui->Filters_Audio_astats->isChecked())
