@@ -15,7 +15,7 @@
             The QCTools Document is designed to be a self-descriptive metadata document that stores analytical metadata about video and audio frames and may be quickly rendered in QCTools version 0.5 or later. The QCTools Document is an XML expression of FFprobe's XML expression as defined by the ffprobe schema at <a href="http://www.ffmpeg.org/schema/ffprobe.xsd">http://www.ffmpeg.org/schema/ffprobe.xsd</a>. For more information about FFprobe's XML expression please visit: <a href="http://ffmpeg.org/ffprobe.html#xml">http://www.ffmpeg.org/schema/ffprobe.xsd</a>; for additional information about FFprobe's XML expression: <a href="http://ffmpeg.org/ffprobe.html#xml">http://ffmpeg.org/ffprobe.html#xml</a>.
         </p>
         <p>
-            In addition to frame metadata, the QCTools Document stores metadata values output from four evaluative filters: signalstats, cropdetect, psnr, and ebur128.
+            In addition to frame metadata, the QCTools Document stores metadata values output from four evaluative filters: signalstats, cropdetect, psnr, ssim, and ebur128.
         </p>
         <ol>
             <li>
@@ -29,6 +29,10 @@
             <li>
                 <strong>psnr</strong><br />
                 Within the QCTools Document the psnr filter is used specifically to visually compare field 1 and field 2. The filter accepts field 1 and field 2 as two separate inputs and provides quantification of the visual difference between those two images for each plane (Y, U, and V) as well as for the overall image. This data is presented in both Peak Signal to Noise Ratio (PSNR) and Mean Square Error (MSE). More info: <a href="ffmpeg.org/ffmpeg-filters.html#psnr">ffmpeg.org/ffmpeg-filters.html#psnr.</a>
+            </li>
+            <li>
+                <strong>ssim</strong><br />
+                Within the QCTools Document the SSIM (Structural SImilarity Metric) between two input videos. The filter is used specifically to visually compare field 1 and field 2. The filter accepts field 1 and field 2 as two separate inputs and provides quantification of the visual difference between those two images for each plane (Y, U, and V) as well as for the overall image. More info: <a href="ffmpeg.org/ffmpeg-filters.html#ssim">ffmpeg.org/ffmpeg-filters.html#ssim.</a>
             </li>
             <li>
                 <strong>ebur128</strong><br />
