@@ -178,6 +178,12 @@
         <p>
             This filter is similar to Mean Square Error per Field but uses the Peak Signal to Noise Ratio (PSNR) algorithm. See FFmpeg's documentation on the<a href="http://ffmpeg.org/ffmpeg-filters.html#psnr">PSNR filter</a> for more information.
         </p>
+        <h3>
+            Structural SImilarity Metric per Field (SSIMf)
+        </h3>
+        <p>
+            This filter is similar to PSNRf and MSEf but uses the Structural SImilarity Metric (SSIM) algorithm. See FFmpeg's documentation on the<a href="http://ffmpeg.org/ffmpeg-filters.html#ssim">SSIM filter</a> for more information.
+        </p>
         <h2 style="color:blue">
             <a id="Choose" name="Choose">What Graphs should I chose?</a>
         </h2>
