@@ -83,6 +83,11 @@
                 <td>The PSNR filter is used in QCTools specifically to generate a comparison between the two fields of the frame. The resulting data documents how different the fields are (which can find head-clogs or other videotape playback errors).</td>
             </tr>
             <tr>
+                <td><a href="http://ffmpeg.org/ffmpeg-filters.html#ssim">SSIM</a></td>
+                <td>video</td>
+                <td>The SSIM filter is used in QCTools specifically to generate a comparison between the two fields of the frame. The resulting data documents how different the fields are (which can find head-clogs or other videotape playback errors). It is similar to PSNR but usually a different visual comparison algorithm.</td>
+            </tr>
+            <tr>
                 <td><a href="http://ffmpeg.org/ffmpeg-filters.html#astats">astats</a></td>
                 <td>audio</td>
                 <td>The astats filter compiles statistics on audio data for small units of time, including maximum and minimum audio levels, DC Offset, the amount of consecutive audio sample differences, and RMS data.</td>
