@@ -1,3 +1,7 @@
+Next
+-----
++ Added graphing the SSIM (Structural SImilarity Metric) between the two fields.
+
 0.7.2, 2015-11-17
 -----
 + Add plotlines for reference black and white in YUV graphs (GitHub issue #96)
